unpackaged/main/default/objects/Activity/fields/Call_Answered_At__c.field-meta.xml
<CustomField>
    <fullName>Call_Answered_At__c</fullName>
    <label>Call Answered At</label>
    <length>50</length>
    <type>Text</type>
</CustomField>