unpackaged/main/default/objects/Activity/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <label>Call Duration</label>
    <length>8</length>
    <type>Text</type>
</CustomField>