unpackaged/main/default/objects/Activity/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Returned Call</fullName>
            </value>
            <value>
                <fullName>Left Message with Non-Patient</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>