unpackaged/main/default/objects/Activity/fields/Call_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Record_ID__c</fullName>
    <label>Call Record ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>