unpackaged/main/default/objects/Activity/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>25</length>
    <type>Text</type>
</CustomField>