unpackaged/main/default/objects/Activity/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <label>Duration(Hours)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>