unpackaged/main/default/objects/Activity/fields/Final_Call_on_Which_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Final_Call_on_Which_Attempt__c</fullName>
    <label>Final Call on Which Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attempt 1</fullName>
            </value>
            <value>
                <fullName>Attempt 2</fullName>
            </value>
            <value>
                <fullName>Attempt 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>