unpackaged/main/default/objects/Activity/fields/Task_Audit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Task_Audit_Date_Time__c</fullName>
    <label>Task Audit Date/Time</label>
    <type>DateTime</type>
</CustomField>