unpackaged/main/default/objects/Activity/fields/Task_Audited__c.field-meta.xml
<CustomField>
    <fullName>Task_Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Audited</label>
    <type>Checkbox</type>
</CustomField>