unpackaged/main/default/objects/Activity/fields/Task_Notes__c.field-meta.xml
<CustomField>
    <fullName>Task_Notes__c</fullName>
    <label>Task Notes</label>
    <type>TextArea</type>
</CustomField>