unpackaged/main/default/objects/Activity/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account One-Off Request</fullName>
            </value>
            <value>
                <fullName>Agent Call Review / Agent Coaching</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Call Monitoring</fullName>
            </value>
            <value>
                <fullName>Copay Renewals / Reload</fullName>
            </value>
            <value>
                <fullName>Drug Manufacturer</fullName>
            </value>
            <value>
                <fullName>Schedule Meeting</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Training / Training QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>