unpackaged/main/default/objects/Activity/fields/Terminate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Terminate_Reason__c</fullName>
    <label>Terminate Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>