unpackaged/main/default/objects/Activity/fields/Wrong_Person_Task_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Person_Task_Reassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wrong Person - Task Reassigned</label>
    <type>Checkbox</type>
</CustomField>